# secure-signer

./: .gitignore  CMakeLists.txt  Cargo.toml  GitVersion.yml  Makefile  Occlum.json  README.md  build.rs  build_enclave.sh  build_secure_signer.sh  download_and_build.sh  enclave.py  index.md  leader-rust-config.yaml  run_container.sh  run_secure_signer.sh  secure-signer-rust-config.yaml  setup_fresh_ubuntu_2004_sgx_occlum.sh  setup_occlum.sh  start_occlum_docker.sh  worker-rust-config.yaml
.github/workflows/: git-version.yml  unit-test.yml
conf/: guardian-rust-config.yaml  network_config.json  ra_config.json  secure-signer-rust-config.yaml  validator-rust-config.yaml
container/: Dockerfile_SS.ubuntu20.04  build_image.sh
docs/: Gemfile  _config.yml  about.markdown  client.md  dev_ss.md  getting_started.md  index.markdown  index.md  install.md  run_ss.md
docs/_posts/: 2023-01-21-welcome-to-jekyll.markdown  2023-01-30-welcome-to-jekyll.markdown
docs/secure-signer/: Gemfile  _config.yml
docs/secure-signer/_posts/: 2023-01-30-welcome-to-jekyll.markdown
docs/source/: conf.py  dev.rst  index.rst
lib/src/: ra_ias.cpp  ra_json.cpp  ra_quote.cpp
resources/: puffer-signer.yaml  redoc-static.html  secure-signer.yaml
resources/keygen/: schemas.yaml
resources/keygen/paths/: bls_keygen.yaml  secp256k1_keygen.yaml
resources/keymanager/: schemas.yaml
resources/keymanager/paths/: keystores.yaml
resources/signing/: schemas.yaml
resources/signing/paths/: deposit.yaml  remote-attestation.yaml  sign.yaml  upcheck.yaml
src/: attest.rs  beacon.rs  beacon_signing.rs  beacon_types.rs  client.rs  common_api.rs  constants.rs  datafeed.rs  errors.rs  eth_signing.rs  eth_types.rs  keys.rs  leader.rs  leader_api.rs  lib.rs  main.rs  ra_wrapper.cpp  remote_attesation.rs  remote_attestation.rs  route_handlers.rs  routes.rs  secure_signer.rs  sgx_signer.rs  slash_protection.rs  worker.rs  worker_api.rs
src/api/: bls_import_route.rs  bls_keygen_route.rs  deposit_route.rs  eth_keygen_route.rs  getter_routes.rs  helpers.rs  mod.rs  signing_route.rs
src/cli/: bls_import.rs  deposit.rs  mod.rs  routes.rs  withdraw.rs
src/client/: bls_import.rs  deposit.rs  guardian.rs  keygen.rs  mod.rs  routes.rs  secure_signer.rs  validator.rs  withdraw.rs
src/client/methods/: mod.rs
src/client/methods/secure_signer/: generate_eth_key.rs  health.rs  mod.rs
src/client/mock/: guardian.rs  mod.rs  validator.rs
src/client/tests/: guardian.rs  mod.rs  secure_signer.rs  validator.rs
src/client/traits/: mod.rs
src/crypto/: bls_keys.rs  eth_keys.rs  keystore.rs  mod.rs
src/enclave/: mod.rs  types.rs
src/enclave/guardian/: attest_fresh_eth_key.rs  mod.rs  validate_custody.rs
src/enclave/guardian/handlers/: attest_fresh_eth_key_with_blockhash.rs  mod.rs  sign_exit.rs  validate_custody.rs
src/enclave/secure_signer/: mod.rs
src/enclave/secure_signer/handlers/: bls_keygen.rs  eth_keygen.rs  mod.rs  secure_sign_bls.rs  validator_deposit.rs
src/enclave/shared/: mod.rs
src/enclave/shared/handlers/: health.rs  list_bls_keys.rs  list_bls_keys_for_vc.rs  list_eth_keys.rs  mod.rs  secure_sign_bls.rs
src/enclave/test/: integration.rs
src/enclave/validator/: mod.rs
src/enclave/validator/handlers/: attest_fresh_bls_key.rs  mod.rs
src/eth2/: eth_signing.rs  eth_types.rs  mod.rs  slash_protection.rs
src/io/: key_management.rs  mod.rs  ra_wrapper.cpp  remote_attestation.rs
src/middlewares/: mod.rs  terminal_logger.rs  tracing_filter.rs
tests/: Makefile  mod.rs
tests/common/: bls_import_helper.rs  bls_keygen_helper.rs  eth_keygen_helper.rs  eth_specs.rs  getter_routes_helper.rs  mod.rs  signing_helper.rs
tests/signing_tests/: aggregate_and_proof.rs  aggregation_slot.rs  attestation.rs  block.rs  block_v2.rs  contribution_and_proof.rs  deposit.rs  mod.rs  randao_reveal.rs  sync_committee_message.rs  sync_committee_selection_proof.rs  validator_registration.rs
